--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,17 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.9</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.3</version>
+		</dependency>
 
 
 	</dependencies>
